# bird-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.old  README.md  Untitled  run_test.sh
assets/models/: Lowpoly_tree_sample.obj.bird  Lowpoly_tree_sample.obj0.mat.bird  Lowpoly_tree_sample.obj1.mat.bird  Lowpoly_tree_sample.obj2.mat.bird  cube.obj.bird
assets/models/bugatti/: README.txt  bugatti.obj1.mat.bird  bugatti.obj15.mat.bird  bugatti.obj18.mat.bird  bugatti.obj19.mat.bird  bugatti.obj2.mat.bird  bugatti.obj23.mat.bird  bugatti.obj24.mat.bird  bugatti.obj26.mat.bird  bugatti.obj27.mat.bird  bugatti.obj31.mat.bird  bugatti.obj32.mat.bird  bugatti.obj33.mat.bird  bugatti.obj35.mat.bird  bugatti.obj36.mat.bird  bugatti.obj38.mat.bird  bugatti.obj5.mat.bird  bugatti.obj6.mat.bird
assets/shaders/: basic.frag  basic.vert  colorgrading.frag  default.frag  default.vert  default_fragment.glsl  default_vertex.glsl  fragment.glsl  fxaa.frag  passthrough.frag  passthrough.vert  ssao.frag  vertex.glsl  vertex.vert  vertex.vert.spv
assets/textures/: texture.jpg.bird  waterfall.png.bird
build-tools/: CMakeLists.txt
build-tools/src/: Main.cpp
install/cmake/Bird_Engine/: Bird_EngineConfig-noconfig.cmake  Bird_EngineConfig.cmake
install/include/: Application.h
install/include/build-tools/: AssetLoader.h
install/include/physics/: JoltIncludes.h  PhysicsLayers.h  PhysicsPipeline.h
install/include/renders/: GraphicsConstants.h  Window.h
install/include/renders/directx12/: DXPipeline.h
install/include/renders/generic/: FrameBuffer.h  Material.h  Mesh.h  RawBuffer.h  Shader.h
install/include/renders/opengl/: GLBuffer.h  GLFrameBuffer.h  GLMesh.h  GLShader.h  GLTexture.h
install/include/renders/vulkan/: VKConstants.h  VKSwapChain.h  VKTexture.h  VKUniformBuffer.h
install/include/scene/: Camera.h  DefaultCamera.h  Entity.h  WorldObject.h
install/include/scene/components/: Component.h  MeshComponent.h  PhysicsBodyComponent.h
install/include/util/: Assets.h  Constants.h  ResourceManager.h
libs/: CMakeLists.txt
shaders/: default_fragment.glsl  default_vertex.glsl  fragment.frag  fragment.glsl  fragment2.frag
src/: Application.cpp  Application.h  ApplicationVK.cpp  ApplicationVK.h  main.cpp
src/build-tools/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  build-tools.cpp
src/physics/: CMakeLists.txt  JoltIncludes.h  PhysicsPipeline.cpp  PhysicsPipeline.h
src/renders/: CMakeLists.txt  GraphicsConstants.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Window.cpp  Window.h
src/renders/directx12/: CMakeLists.txt  DXPipeline.cpp
src/renders/generic/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RawBuffer.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/renders/metal/: CMakeLists.txt  MLPipeline.cpp  MLPipeline.h
src/renders/opengl/: CMakeLists.txt  GLBuffer.cpp  GLBuffer.h  GLConstants.h  GLFrameBuffer.cpp  GLMesh.cpp  GLMesh.h  GLPipeline.cpp  GLPipeline.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
src/renders/vulkan/: CMakeLists.txt  VKConstants.h  VKInstance.cpp  VKInstance.h  VKLogicalDevice.cpp  VKLogicalDevice.h  VKPhysicalDevice.cpp  VKPhysicalDevice.h  VKPipeline.cpp  VKPipeline.h  VKRenderPass.cpp  VKRenderPass.h  VKRenderPipeline.cpp  VKRenderPipeline.h  VKSwapChain.cpp  VKSwapChain.h  VKTexture.cpp  VKUniformBuffer.cpp
src/scene/: CMakeLists.txt  Camera.cpp  Camera.h  DefaultCamera.cpp  DefaultCamera.h  Entity.cpp  Entity.h  Light.cpp  Light.h  ModelEntity.cpp  ModelEntity.h  Scene.cpp  Scene.h  WorldObject.cpp  WorldObject.h
src/scene/components/: CMakeLists.txt  Component.cpp  Component.h  MeshComponent.cpp  MeshComponent.h  PhysicsBodyComponent.cpp  PhysicsBodyComponent.h
src/util/: Assets.cpp  Assets.h  File.cpp  File.h  Input.cpp  Input.h  Math.cpp  Math.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  stb_image.h
test/: .clang-format  CMakeLists.txt  main.cpp
